
Besure to also join the discord: https://discord.gg/wv6huJAwEv

NOTE: Make sure you refresh the page! Sometimes you will not get the lastest update!

+ Means something was added
^ Means something was upgraded or changed
- Means something was removed
------------------------------------------------------------
Aug, 29
+ Added Precision Client
------------------------------------------------------------
Aug, 28
+ Updated site to v3
------------------------------------------------------------
May, 23
+ Added Subway Surfers
------------------------------------------------------------
May, 14
+ Added 50+ Games (Thank you ThatOnePerson!)
------------------------------------------------------------
May, 13
+ Added gimme the airpod
------------------------------------------------------------
May, 12
+ Added 1v1, made by Elijah
+ Added Big Tower Tiny Square
^ Set tab spacing to 2 on index
------------------------------------------------------------
May, 10
+ Added CircloO
------------------------------------------------------------
May, 6
+ Added Wolfenstein 3D
+ Added Hextris
^ Fixed issue with Eaglercraft not working
------------------------------------------------------------
May, 5
New discord link: https://discord.gg/wv6huJAwEv
------------------------------------------------------------
May, 4
My discord account was hacked by some people, and the discord server was deleted. I have reached out to discord suppport and hopefully I can restore it. I will keep you all posted on this issue!
+ Added Eaglercraft (credit to LAX1DUDE)
------------------------------------------------------------
May, 3
First update of May! For the people who are doing the rift, you all have been making great progress!
+ Added Grindcraft
------------------------------------------------------------
Apr, 29
+ Added BlooketUI
+ Added back Holy Unblocker
^ Update Rift
------------------------------------------------------------
Apr, 28
+ Added Sort The Court
^ Updated rift