@@ -571,6 +571,13 @@
         </div>
       </a>
 
+      <a href="projects/krunker/index.html" class="game-link container">
+        <div class="game-tile">
+          <img class="game-icon" src="projects/krunker/img/krunker-io.jpg" alt="icon" />
+          <h1 class="game-title">Krunker</h1>
+        </div>
+      </a>
+
       <a href="projects/learntofly/index.html" class="game-link container">
         <div class="game-tile">
           <img class="game-icon" src="projects/learntofly/learntofly.png" alt="icon" />
