@@ -1,0 +1,21 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta property="og:url" content="https://3kh0.github.io/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Krunker | 3kh0" />
+    <meta property="og:description" content="Krunker" />
+    <meta property="og:image" content="img/favicon.jpg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:site_name" content="Krunker" />
+    <link rel="icon" sizes="192x192" href="img/favicon.png" />
+    <link rel="shortcut icon" href="img/logo_1.png" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="img/krunker-io.jpg" type="image/x-icon" />
+    <title>Krunker | 3kh0</title>
+    <script type="application/javascript" src="/js/main.js"></script>
+  </head>
+  <body>
+    <!--Loads the actual game from amazon aws-->
+    <iframe src="https://browserfps.com" title="Krunker Launcher" style="border: 0; height: 100%; left: 0; position: absolute; top: 0; width: 100%;"></iframe>
+  </body>
+</html>
