@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Precision Client | 3kh0</title>
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta charset="UTF-8" />
@@ -13,61 +12,59 @@
     <meta content="en-US" property="og:locale" />
     <meta content="website" property="og:type" />
     <meta content="//precisionclient.vercel.app" property="og:url" />
-    <meta content="https://cdn.discordapp.com/attachments/952288902494965811/1008211623208570900/unknown.png"
-        property="og:image" />
-    <meta
-        content="Precision Client is an instance of Minecraft 1.5.2 that was ported to the web by LAX1DUDE and forked by EtcherFX. This client has custom resource packs and more."
-        property="og:description" />
+    <meta content="https://cdn.discordapp.com/attachments/952288902494965811/1008211623208570900/unknown.png" property="og:image" />
+    <meta content="Precision Client is an instance of Minecraft 1.5.2 that was ported to the web by LAX1DUDE and forked by EtcherFX. This client has custom resource packs and more." property="og:description" />
     <script src="classes.js" type="text/javascript"></script>
     <script type="text/javascript" src="eagswebrtc.js"></script>
     <script type="text/javascript">
-        function texture() {
-            const texturechoice = prompt(
-                "Choose a texture pack to equip:\n- Default 1.5 [1.5]\n- Default 1.17 [1.17]\n- Bombies 180k [Bombies]\n- Bare Bones [Bones]\n- Modified 1.17 [M1.17]\n- Miami Private [Miami]\n- Nebula [Nebula]\n- Ricefault [Rice] (Not complete)\n- Tightfault [Tight]\n- Walifault [Wali]\nTo select a resource pack, enter the characters from inside the brackets in the box below."
-            );
+      function texture() {
+        const texturechoice = prompt(
+          "Choose a texture pack to equip:\n- Default 1.5 [1.5]\n- Default 1.17 [1.17]\n- Bombies 180k [Bombies]\n- Bare Bones [Bones]\n- Modified 1.17 [M1.17]\n- Miami Private [Miami]\n- Nebula [Nebula]\n- Ricefault [Rice] (Not complete)\n- Tightfault [Tight]\n- Walifault [Wali]\nTo select a resource pack, enter the characters from inside the brackets in the box below."
+        );
 
-            let texture = "packs/1.5.epk";
-            if (texturechoice === "1.17") {
-                texture = "packs/1.17.epk";
-            } else if (texturechoice === "Bombies" || texturechoice === "bombies") {
-                texture = "packs/Bombies.epk";
-            } else if (texturechoice === "Bones" || texturechoice === "bones") {
-                texture = "packs/Bones.epk";
-            } else if (texturechoice === "M1.17" || texturechoice === "m1.17") {
-                texture = "packs/M1.17.epk";
-            } else if (texturechoice === "Miami" || texturechoice === "miami") {
-                texture = "packs/Miami.epk";
-            } else if (texturechoice === "Nebula" || texturechoice === "nebula") {
-                texture = "packs/Nebula.epk";
-            } else if (texturechoice === "Rice" || texturechoice === "rice") {
-                texture = "packs/Rice.epk";
-            } else if (texturechoice === "Tight" || texturechoice === "tight") {
-                texture = "packs/Tight.epk";
-            } else if (texturechoice === "Wali" || texturechoice === "Wali") {
-                texture = "packs/Wali.epk";
-            }
-
-            window.addEventListener("load", function () {
-                window.minecraftOpts = [
-                    "game_frame",
-                    texture,
-                    "CgAACQAHc2VydmVycwoAAAAGCAAKZm9yY2VkTU9URAAAAQALaGlkZUFkZHJlc3MBCAACaXAAH3dzczovL3dlYi5hc3NwaXhlbC5uZXQvQ0FQaXhlbC8IAARuYW1lAAhBKnNwaXhlbAAIAApmb3JjZWRNT1REAAABAAtoaWRlQWRkcmVzcwEIAAJpcAAbd3NzOi8vcGxheS5ibm9nb2NhcmZ0LmdhbWVzCAAEbmFtZQAMQm5vZ29DYXJmdE1DAAgACmZvcmNlZE1PVEQAAAEAC2hpZGVBZGRyZXNzAQgAAmlwABt3c3M6Ly9hZW9uLm1lZ2F0a2MucmVwbC5jby8IAARuYW1lAAxBZW9uIE5ldHdvcmsACAAKZm9yY2VkTU9URAAAAQALaGlkZUFkZHJlc3MBCAACaXAAH3dzczovL3BsYXkudmFuaWxsYWNyYWZ0c21wLm9yZy8IAARuYW1lAAxWYW5pbGxhQ3JhZnQACAAKZm9yY2VkTU9URAAAAQALaGlkZUFkZHJlc3MBCAACaXAAHXdzczovL3N1cy5zaGhub3dpc25vdHRoZXRpLm1lCAAEbmFtZQAIQXl1bmJvb20ACAAKZm9yY2VkTU9URAAAAQALaGlkZUFkZHJlc3MBCAACaXAAJHdzczovL3NlYWxjcmFmdC5kZG5zLm5ldDo0NDIvc2VydmVycwgABG5hbWUACVNlYWxjcmFmdAAA",
-                ];
-                (function () {
-                    let q = window.location.search;
-                    if (typeof q === "string" && q.startsWith("?")) {
-                        q = new URLSearchParams(q);
-                        const s = q.get("server");
-                        if (s) window.minecraftOpts.push(s);
-                    }
-                })();
-                main();
-            });
+        let texture = "packs/1.5.epk";
+        if (texturechoice === "1.17") {
+          texture = "packs/1.17.epk";
+        } else if (texturechoice === "Bombies" || texturechoice === "bombies") {
+          texture = "packs/Bombies.epk";
+        } else if (texturechoice === "Bones" || texturechoice === "bones") {
+          texture = "packs/Bones.epk";
+        } else if (texturechoice === "M1.17" || texturechoice === "m1.17") {
+          texture = "packs/M1.17.epk";
+        } else if (texturechoice === "Miami" || texturechoice === "miami") {
+          texture = "packs/Miami.epk";
+        } else if (texturechoice === "Nebula" || texturechoice === "nebula") {
+          texture = "packs/Nebula.epk";
+        } else if (texturechoice === "Rice" || texturechoice === "rice") {
+          texture = "packs/Rice.epk";
+        } else if (texturechoice === "Tight" || texturechoice === "tight") {
+          texture = "packs/Tight.epk";
+        } else if (texturechoice === "Wali" || texturechoice === "Wali") {
+          texture = "packs/Wali.epk";
         }
-        texture();
+
+        window.addEventListener("load", function () {
+          window.minecraftOpts = [
+            "game_frame",
+            texture,
+            "CgAACQAHc2VydmVycwoAAAAGCAAKZm9yY2VkTU9URAAAAQALaGlkZUFkZHJlc3MBCAACaXAAH3dzczovL3dlYi5hc3NwaXhlbC5uZXQvQ0FQaXhlbC8IAARuYW1lAAhBKnNwaXhlbAAIAApmb3JjZWRNT1REAAABAAtoaWRlQWRkcmVzcwEIAAJpcAAbd3NzOi8vcGxheS5ibm9nb2NhcmZ0LmdhbWVzCAAEbmFtZQAMQm5vZ29DYXJmdE1DAAgACmZvcmNlZE1PVEQAAAEAC2hpZGVBZGRyZXNzAQgAAmlwABt3c3M6Ly9hZW9uLm1lZ2F0a2MucmVwbC5jby8IAARuYW1lAAxBZW9uIE5ldHdvcmsACAAKZm9yY2VkTU9URAAAAQALaGlkZUFkZHJlc3MBCAACaXAAH3dzczovL3BsYXkudmFuaWxsYWNyYWZ0c21wLm9yZy8IAARuYW1lAAxWYW5pbGxhQ3JhZnQACAAKZm9yY2VkTU9URAAAAQALaGlkZUFkZHJlc3MBCAACaXAAHXdzczovL3N1cy5zaGhub3dpc25vdHRoZXRpLm1lCAAEbmFtZQAIQXl1bmJvb20ACAAKZm9yY2VkTU9URAAAAQALaGlkZUFkZHJlc3MBCAACaXAAJHdzczovL3NlYWxjcmFmdC5kZG5zLm5ldDo0NDIvc2VydmVycwgABG5hbWUACVNlYWxjcmFmdAAA",
+          ];
+          (function () {
+            let q = window.location.search;
+            if (typeof q === "string" && q.startsWith("?")) {
+              q = new URLSearchParams(q);
+              const s = q.get("server");
+              if (s) window.minecraftOpts.push(s);
+            }
+          })();
+          main();
+        });
+      }
+      texture();
     </script>
-</head>
+  </head>
 
-<body id="game_frame" style="margin: 0; width: 100vw; height: 100vh;"></body>
-
+  <body id="game_frame" style="margin: 0; width: 100vw; height: 100vh;">
+    <script type="application/javascript" src="/js/main.js"></script>
+  </body>
 </html>
